# mazetd

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: tests.yml
data/mazetd/: mazetd.pack
data/mazetd/buildings/: augment-fire.cpm  augment-fire.object  augment-magic.cpm  augment-poison.cpm  augment-poison.object  augment-water.cpm  augment-water.object  buildings.assets  buildings.pack  cheap.object  collector-snow.object  collector-sun.object  collector-water.object  collector-wind.object  fast.object  heavy.object  mage.object  mana-capacitor.object  sniper.object  splash.object  targeting-back.object  targeting-closest.object  targeting-farthest.object  targeting-front.object  trap-haste.cpm  (+7 more)
sources/: camera.cpp  common.h  environment.cpp  game.h  grid.h  main.cpp  map.h  normalizedReal.h  paths.h
sources/game/: attacks.cpp  environment.cpp  game.cpp  healthbars.cpp  manaCollection.cpp  manaGeneration.cpp  manaTransfer.cpp  monsterGhosts.cpp  monsterSpawning.cpp  monsters.cpp  placingBuildings.cpp  playerCursor.cpp  render.cpp  renderEffect.cpp  spatial.cpp
sources/map/: generate.cpp  generate.h  grid.cpp  paths.cpp  procedural.cpp  render.cpp
sources/player/: buildingsList.cpp  buildingsMods.cpp  buildingsPlacement.cpp  buildingsVisualization.cpp  camera.cpp  cursor.cpp  environment.cpp  gameSpeed.cpp  pathVisualization.cpp  placingBuildings.cpp
sources/screens/: about.cpp  finish.cpp  game.cpp  gameMenu.cpp  gameOver.cpp  gameWin.cpp  generating.cpp  loading.cpp  lost.cpp  mainMenu.cpp  paused.cpp  screens.cpp  screens.h  won.cpp
(+86 files in other folders)
